✨ refactor: sonarLint 피드백 적용